--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -14,7 +14,9 @@ permalink: /posts/
         <li class="c-archives__item">
             <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
             <p>{{ post.date | date: "%b %-d, %Y" }}</p>
+            <br>
         </li>
+        <h5>tags: <a href="{{ post.categories }}">{{ post.categories }}</a></h5>
     {% if forloop.last %}
         </ul>
     {% else %}
