--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -12,7 +12,7 @@ permalink: /posts/
         <ul class="c-archives__list">
     {% endif %}
         <li class="c-archives__item">
-            <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
+            <h3><a href="{{ post.url | prepend: site.baseurl }}#disqus_thread">{{ post.title }}</a></h3>
             <p>{{ post.date | date: "%b %-d, %Y" }}</p>
             <br>
         </li>
@@ -27,3 +27,5 @@ permalink: /posts/
         {% endif %}
     {% endif %}
 {% endfor %}
+
+<script id="dsq-count-scr" src="//gabrieleangeletti.disqus.com/count.js" async></script>
