--- a/_pages/prolog.html
+++ b/_pages/prolog.html
@@ -9,7 +9,7 @@ permalink: /posts/prolog/
 
     {% if post.categories contains "prolog" %}
           <li class="c-archives__item">
-              <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
+              <h3><a href="{{ post.url | prepend: site.baseurl }}#disqus_thread">{{ post.title }}</a></h3>
               <p>{{ post.date | date: "%b %-d, %Y" }}</p>
               <br>
           </li>
@@ -24,3 +24,5 @@ permalink: /posts/prolog/
       {% endif %}
     {% endif %}
 {% endfor %}
+
+<script id="dsq-count-scr" src="//gabrieleangeletti.disqus.com/count.js" async></script>
