--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -12,7 +12,8 @@ permalink: /posts/
         <ul class="c-archives__list">
     {% endif %}
         <li class="c-archives__item">
-            <h3><a href="{{ post.url | prepend: site.baseurl }}#disqus_thread">{{ post.title }}</a></h3>
+            <a href="{{ post.url | prepend: site.baseurl }}"><h3>{{ post.title }}</h3></a>
+            <a href="{{ post.url | prepend: site.baseurl }}#disqus_thread"></a>
             <p>{{ post.date | date: "%b %-d, %Y" }}</p>
             <br>
         </li>
