--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,8 @@
 ---
-layout: showcase
+layout: default
 title: Resume
 permalink: /resume/
 ---
+<div class="cv-iframe">
 <iframe src="http://docs.google.com/gview?url=http://www.gabrieleangeletti.com/img/cv.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+</div>
