--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ permalink: /projects/
 {% for project in site.categories.projects %}
     <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-desktop mdl-cell--4-col-tablet  mdl-cell--12-col-phone">
       <div class="mdl-card__title" {% if project.image %} style="background: url('{{ project.image }}') center/cover;" {% endif %}>
-        <h2 class="mdl-card__title-text">{{project.title}}</h2>
+        <h2 class="mdl-card__title-text {{ project.card-title-color }}">{{ project.title }}</h2>
       </div>
       <div class="mdl-card__supporting-text">
         <span>{{ project.date | date: "%b %-d, %Y" }}</span>
