Added www.thedataware.com link

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <div class="page-content">
+  <h1>My blog has moved <a href="http://www.thedataware.com">here</a>.</h1>
   <div class="mdl-grid">
   {% if site.post_type == 'highlight' %}
 
