--- a/amp/index.html
+++ b/amp/index.html
@@ -163,7 +163,7 @@
     <img src="https://gabrieleangeletti.github.io/images/author.png" alt=""
       class="img-fluid author-thumb-sm d-block mx-auto rounded-circle mb-4">
     
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+    <p>Hi, I'm Gabriele! A software engineer and rock climbing addict on a journey to location independence.</p>
     <a href="https://gabrieleangeletti.github.io/about/about/" class="btn btn-outline-primary">Know More</a>
     
   </div>
