--- a/contact/index.html
+++ b/contact/index.html
@@ -272,7 +272,7 @@
     a.src = g;
     m.parentNode.insertBefore(a, m)
   })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'Your ID', 'auto');
+  ga('create', 'UA-154852357-1', 'auto');
   ga('send', 'pageview');
 </script></body>
 </html>
