--- a/about/index.html
+++ b/about/index.html
@@ -168,10 +168,18 @@
   
   <div class="widget">
     <h4 class="widget-title">Categories</h4>
+    <ul class="list-unstyled">
+      <li><a href="/categories/software-engineering">Software engineering</a>
+      </li>
+    </ul>
   </div>
   
   <div class="widget">
     <h4 class="widget-title">Tags</h4>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
+          href="/tags/python">Python</a></li>
+    </ul>
   </div>
   
   <div class="widget">
@@ -243,6 +251,11 @@
       </div>
       <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Categories</h6>
+        <ul class="list-unstyled">
+          <li class="mb-3"><a class="text-dark"
+              href="/categories/software-engineering">Software engineering</a>
+          </li>
+        </ul>
       </div>
       <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Quick Links</h6>
