--- a/about/index.html
+++ b/about/index.html
@@ -167,16 +167,15 @@
   </div>
   
   <div class="widget">
-    <h4 class="widget-title">Category</h4>
+    <h4 class="widget-title">Categories</h4>
     <ul class="list-unstyled">
-      <li><a
-          href="/categories/software-engineering">Software engineering</a>
+      <li><a href="/categories/software-engineering">Software engineering</a>
       </li>
     </ul>
   </div>
   
   <div class="widget">
-    <h4 class="widget-title">Social</h4>
+    <h4 class="widget-title">Tags</h4>
     <ul class="list-inline">
       <li class="list-inline-item"><a class="d-block p-2 bg-primary text-white"
           href="/tags/continuous-integration">Continuous integration</a></li>
@@ -206,9 +205,7 @@
     </ul>
   </div>
   
-  <div class="widget">
-    <img src="https://gabrieleangeletti.github.io/images/promotion.png" alt="" class="img-fluid">
-  </div>
+  
 </div>
       
 
