deploy: 43a18eb34cf5d967cfb54c5b2a51a5bdd5cb49c7

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name=generator content="Hugo 0.88.1">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=description content>
+<meta name=description content="Welcome to my knowledge base! #  Introduction #  ">
 <meta name=theme-color content="#FFFFFF">
 <meta name=color-scheme content="light dark"><meta property="og:title" content="Gabriele Angeletti">
 <meta property="og:description" content>
@@ -14,7 +14,7 @@
 <link rel=icon href=/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/flexsearch.min.js></script>
-<script defer src=/en.search.min.4190e2f21f80cec1f69778de4bd84a6029d1f04957a9753854e71ec6bbcc031d.js integrity="sha256-QZDi8h+AzsH2l3jeS9hKYCnR8ElXqXU4VOcexrvMAx0=" crossorigin=anonymous></script>
+<script defer src=/en.search.min.5cc45e62c43b37cdbffe20028f02949be281df256d4331c9722d2a3ca45eef89.js integrity="sha256-XMReYsQ7N82//iACjwKUm+KB3yVtQzHJci0qPKRe74k=" crossorigin=anonymous></script>
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-XXXXXXXXX-X','auto'),ga('send','pageview'))</script><link rel=alternate type=application/rss+xml href=https://gabrieleangeletti.github.io/index.xml title="Gabriele Angeletti">
 </head>
 <body dir=ltr>
@@ -34,17 +34,27 @@
 <ul id=book-search-results></ul>
 </div>
 <ul>
-</ul>
+<li class=book-section-flat>
+<span>Topics</span>
 <ul>
 <li>
-<a href=https://github.com/alex-shpak/hugo-book target=_blank rel=noopener>
-Page one
-</a>
+<input type=checkbox id=section-101caae44951da2290be4c7eeffdb1af class=toggle>
+<label for=section-101caae44951da2290be4c7eeffdb1af class="flex justify-between">
+<a href=https://gabrieleangeletti.github.io/docs/topics/software-engineering/>Software Engineering</a>
+</label>
+<ul>
+<li>
+<a href=https://gabrieleangeletti.github.io/docs/topics/software-engineering/python/>Python</a>
+</li>
+</ul>
+</li>
+</ul>
 </li>
 <li>
-<a href=https://themes.gohugo.io/hugo-book/ target=_blank rel=noopener>
-Hugo Themes
-</a>
+<a href=https://gabrieleangeletti.github.io/docs/about/>About</a>
+</li>
+<li>
+<a href=https://gabrieleangeletti.github.io/docs/contact/>Contact</a>
 </li>
 </ul>
 </nav>
@@ -63,18 +73,43 @@ Hugo Themes
 </label>
 </div>
 <aside class="hidden clearfix">
+<nav id=TableOfContents>
+<ul>
+<li><a href=#introduction>Introduction</a></li>
+</ul>
+</nav>
 </aside>
 </header>
-<article class=markdown></article>
+<article class=markdown><h1 id=welcome-to-my-knowledge-base>
+Welcome to my knowledge base!
+<a class=anchor href=#welcome-to-my-knowledge-base>#</a>
+</h1>
+<h2 id=introduction>
+Introduction
+<a class=anchor href=#introduction>#</a>
+</h2>
+</article>
 <footer class=book-footer>
 <div class="flex flex-wrap justify-between">
+<div><a class="flex align-center" href=https://github.com/gabrieleangeletti/gabrieleangeletti.github.io/commit/43a18eb34cf5d967cfb54c5b2a51a5bdd5cb49c7 title="Last modified by Gabriele Angeletti | Nov 1, 2021" target=_blank rel=noopener>
+<img src=/svg/calendar.svg class=book-icon alt=Calendar>
+<span>Nov 1, 2021</span>
+</a>
+</div>
 </div>
 <script>(function(){function a(c){const a=window.getSelection(),b=document.createRange();b.selectNodeContents(c),a.removeAllRanges(),a.addRange(b)}document.querySelectorAll("pre code").forEach(b=>{b.addEventListener("click",function(c){a(b.parentElement),navigator.clipboard&&navigator.clipboard.writeText(b.parentElement.textContent)})})})()</script>
 </footer>
+<div class=book-comments>
+</div>
 <label for=menu-control class="hidden book-menu-overlay"></label>
 </div>
 <aside class=book-toc>
 <div class=book-toc-content>
+<nav id=TableOfContents>
+<ul>
+<li><a href=#introduction>Introduction</a></li>
+</ul>
+</nav>
 </div>
 </aside>
 </main>
